--- a/week2/index.html
+++ b/week2/index.html
@@ -8,7 +8,11 @@
   <body>
     <h1>Interactive Media</h1>
     <h2>Instructor: Dr. Rohit Ashok Khot</h2>
+    <button>Enrollment</button>
+    <button>Peanut</button>
+    <a href="https://www.bbc.com/news">Go to BBC news</a>
     <h3>Email:rohitashok.khot@rmit.edu.au (Weekdays 9am-5pm)</h3>
+    <!-- Hi i am Man United -->
     <ul>
       <li>Group 1: Every Tuesday (09:30am - 12:30 pm)</li>
       <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
