--- a/week2/index.html
+++ b/week2/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>htmlpractice</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <h1>Interactive Media</h1>
+    <img src="l-intro-1639457129.jpg" alt="this is cover image" />
     <h2>Instructor: Dr. Rohit Ashok Khot</h2>
     <button>Enrollment</button>
     <button>Peanut</button>
     <a href="https://www.bbc.com/news">Go to BBC news</a>
     <h3>Email:rohitashok.khot@rmit.edu.au (Weekdays 9am-5pm)</h3>
-    <!-- Hi i am Man United -->
     <ul>
       <li>Group 1: Every Tuesday (09:30am - 12:30 pm)</li>
       <li>Group 2: Every Tuesday (01:30 pm - 04:30 pm)</li>
