--- a/interactive/week2/index.html
+++ b/interactive/week2/index.html
@@ -13,7 +13,7 @@
     <h1>Interactive Media</h1>
     <img src="l-intro-1639457129.jpg" alt="this is cover image" />
     <h2>Instructor: Dr. Rohit Ashok Khot</h2>
-    <button>Enrollment</button>
+    <button>idEnrollment</button>
     <button>Peanut</button>
     <a href="https://www.bbc.com/news">Go to BBC news</a>
     <h3>Email:rohitashok.khot@rmit.edu.au (Weekdays 9am-5pm)</h3>
