--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -3,8 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hi</title>
+    <title>Assignment 1</title>
+    <link rel="stylesheet" href="style.css" />
+    <script>
+      scr = "script";
+    </script>
   </head>
-  hi fhfh
-  <body></body>
+  <body>
+    <h1>Researching Orb.farm</h1>
+    <h2>Le Viet Minh - s3997682</h2>
+    <ol>
+      <li>
+        It belongs to the simulation sandbox genre, focusing on the elements and
+        components of the ecosystem
+      </li>
+      <li>Three examples of software in this genre:</li>
+      <ul>
+        <li>
+          SimEarth: A simulation of planet's development from microbes to human
+          civilization
+        </li>
+        <li>
+          Sandboxels: A pixel-based sandbox with chemical and physical elements
+        </li>
+        <li>
+          The Powder Toy: A sandbox allow users to interact and experiment with
+          different materials
+        </li>
+      </ul>
+    </ol>
+  </body>
 </html>
