--- a/assignment1dms3/index.html
+++ b/assignment1dms3/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment 1</title>
+    <title>Assessment Task 1</title>
     <link rel="stylesheet" href="style.css" />
     <script>
       scr = "script";
     </script>
   </head>
   <body>
-    <h1>Researching Orb.farm</h1>
-    <h2>Le Viet Minh - s3997682</h2>
+    <h1>Researching Orb.Farm</h1>
+    <h2>Le Viet Minh - s3997682 - Assessment Task 1</h2>
     <ol>
       <li>
         It belongs to the simulation sandbox genre, focusing on the elements and
         components of the ecosystem
       </li>
 
-      <li>Three examples of software in this genre:</li>
+      <li class="line">Three examples of software in this genre:</li>
       <ul>
         <li>
           SimEarth: A simulation of planet's development from microbes to human
@@ -33,7 +33,7 @@
         </li>
       </ul>
 
-      <li>The program’s interactive mechanics:</li>
+      <li class="line">The program’s interactive mechanics:</li>
       <ul>
         <li>
           Arrange element: Combine and arrange natural factors with any order to
@@ -61,7 +61,7 @@
         </li>
       </ul>
 
-      <li>The program’s mechanics indicate its genre:</li>
+      <li class="line">The program’s mechanics indicate its genre:</li>
       <ul>
         <li>
           Arbitrarily arranging and adjusting the elements are the crucial
@@ -73,7 +73,7 @@
         </li>
       </ul>
 
-      <li>The program’s mechanics are novel:</li>
+      <li class="line">The program’s mechanics are novel:</li>
       <ul>
         <li>
           Unique graphic style when combining pixels and realistic graphics like
@@ -85,7 +85,7 @@
         </li>
       </ul>
 
-      <li>The program’s mechanics are missing:</li>
+      <li class="line">The program’s mechanics are missing:</li>
       <ul>
         <li>
           The diversity of organisms: The limitations of the number of biomes so
@@ -108,13 +108,13 @@
         </li>
       </ul>
 
-      <li>
+      <li class="line">
         This application is mainly aimed at those who are passionate about
         science, biology and creative thoughts with an friendly interface,
         focusing on creative and educational experiences
       </li>
 
-      <li>Annoying aspects about interacting with it:</li>
+      <li class="line">Annoying aspects about interacting with it:</li>
       <ul>
         <li>
           The elements sometime move too chaotic will cause a bad control
@@ -130,7 +130,7 @@
         </li>
       </ul>
 
-      <li>Enjoyable aspects about interacting with it:</li>
+      <li class="line">Enjoyable aspects about interacting with it:</li>
       <ul>
         <li>
           The interface and interactions of the application are very simple that
@@ -146,5 +146,7 @@
         </li>
       </ul>
     </ol>
+
+    <video class="vid" controls src="Orb.farm.mp4"></video>
   </body>
 </html>
