--- a/assessmenttask1/index.html
+++ b/assessmenttask1/index.html
@@ -147,6 +147,6 @@
       </ul>
     </ol>
 
-    <video class="vid" controls muted src="Orb.farm.mp4"></video>
+    <video class="vid" controls muted src="Orb.Farm.mp4"></video>
   </body>
 </html>
