--- a/assessmenttask1/index.html
+++ b/assessmenttask1/index.html
@@ -147,6 +147,8 @@
       </ul>
     </ol>
 
-    <video class="vid" controls muted src="Orb.Farm.mp4"></video>
+    <video class="vid" controls>
+      <source src="Orb.Farm.mp4" type="video/mp4" />
+    </video>
   </body>
 </html>
