--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -18,93 +18,139 @@
       Research about Frank Gehry and the Wall Disney Concert Hall website
     </h1>
     <h2 id="header">Le Viet Minh - s3997682 - Assignment 1</h2>
-    <ol>
-      <li id="list">
-        The first thing I paid attention to is the background music of the
-        website. The music makes me feel like I am really in the Concert Hall
-        and listening to the shows
-      </li>
 
-      <li id="list">
-        My discrete actions:
-        <ul>
-          <li>Clicked to turn on the sound</li>
-          <li>Hovered over interactions elements</li>
-          <li>Scrolled down to reveal more information</li>
-          <li>Read information about the project</li>
-          <li>Watched a short video of Frank Gehry and his inspirations</li>
-          <li>Explored the 3D model of the Concert Hall</li>
-          <li>Interacted with different sections of the model</li>
-        </ul>
-      </li>
+    <p id="question">
+      1. What was the first thing you paid attention to when interacting with
+      the experience?
+    </p>
+    <p id="list">
+      The first thing I paid attention to is the background music of the
+      website. The music makes me feel like I am really in the Concert Hall and
+      listening to the shows
+    </p>
 
-      <li id="list">
-        I spent a lot of time interacting with the 3D model of the building. It
-        is really interesting to explore and learn about the purpose of each
-        section of the Concert Hall
-      </li>
+    <p id="question">
+      2. Spend two minutes with the experience and create a list of each of your
+      discrete actions
+    </p>
+    <ul id="list">
+      My discrete actions:
+      <li>Clicked to turn on the sound</li>
+      <li>Hovered over interactions elements</li>
+      <li>Scrolled down to reveal more information</li>
+      <li>Read information about the project</li>
+      <li>Watched a short video of Frank Gehry and his inspirations</li>
+      <li>Explored the 3D model of the Concert Hall</li>
+      <li>Interacted with different sections of the model</li>
+    </ul>
 
-      <li id="list">
-        The most common action was clicking on the interactive elements which
-        will continue the story with the texts, images and videos of the design
-        process
-      </li>
+    <p id="question">
+      3. What part of the experience did you spend the most time engaging with?
+    </p>
+    <p id="list">
+      I spent a lot of time interacting with the 3D model of the building. It is
+      really interesting to explore and learn about the purpose of each section
+      of the Concert Hall
+    </p>
 
-      <li id="list">
-        The intended primary goal appears to be educating viewers about the
-        process and meaning behind the construction of the Walt Disney Concert
-        Hall by Frank Gehry and his team in a unique and lively style
-      </li>
+    <p id="question">
+      4. What was the most common action in your two minute interaction with the
+      experience?
+    </p>
+    <p id="list">
+      The most common action was clicking on the interactive elements which will
+      continue the story with the texts, images and videos of the design process
+    </p>
 
-      <li id="list">
-        The website has used different components of digital media like visuals,
-        sounds or interactions to go deep into small parts of a complex design
-        idea and tell a complete story
-      </li>
+    <p id="question">
+      5. What is your impression of the intended primary goal of the interactive
+      experience?
+    </p>
+    <p id="list">
+      The intended primary goal appears to be educating viewers about the
+      process and meaning behind the construction of the Walt Disney Concert
+      Hall by Frank Gehry and his team in a unique and lively style
+    </p>
 
-      <li id="list">
-        Viewers can interact with the website in any way and they are all
-        effective. A short visit can give people a panoramic view of the project
-        but spending more time for each part will let them dig deeper about the
-        vision of Frank Gehry
-      </li>
+    <p id="question">
+      6. How does the interactive experience communicate this primary goal?
+    </p>
+    <p id="list">
+      The website has used different components of digital media like visuals,
+      sounds or interactions to go deep into small parts of a complex design
+      idea and tell a complete story
+    </p>
 
-      <li id="list">
-        The project is really detailed and some information is likely to be
-        missed on the first interaction. It encourages viewers to spend more and
-        more time or even come back later to notice some small details that may
-        have been missed last time and discover further into the project
-      </li>
+    <p id="question">
+      7. What is your impression of how the experience should be interacted with
+      over time?
+    </p>
+    <p id="list">
+      Viewers can interact with the website in any way and they are all
+      effective. A short visit can give people a panoramic view of the project
+      but spending more time for each part will let them dig deeper about the
+      vision of Frank Gehry
+    </p>
 
-      <li id="list">
-        The experiences references photography, 3D models, videos and sound
-        elements that reflect the design process of the project
-      </li>
+    <p id="question">
+      8. How does the interactive experience communicate how it should be
+      interacted with over time?
+    </p>
+    <p id="list">
+      The project is really detailed and some information is likely to be missed
+      on the first interaction. It encourages viewers to spend more and more
+      time or even come back later to notice some small details that may have
+      been missed last time and discover further into the project
+    </p>
 
-      <li id="list">
-        The project suggests an unique and exploratory approach with the perfect
-        combination of different elements of digital media and freedom when
-        interaction and exploration
-      </li>
+    <p id="question">
+      9. What other media forms (digital or otherwise) does the experience
+      reference?
+    </p>
+    <p id="list">
+      The experiences references photography, 3D models, videos and sound
+      elements that reflect the design process of the project
+    </p>
 
-      <li id="list">
-        The project depicts the vision and innovative thinking of Frank Gehry
-        with the use of visuals and sounds effectively help viewers understand
-        the artistic meaning behind this design
-      </li>
+    <p id="question">
+      10. What does this reference/s communicate to you about how you should act
+      when engaging with your research experience?
+    </p>
+    <p id="list">
+      The project suggests an unique and exploratory approach with the perfect
+      combination of different elements of digital media and freedom when
+      interaction and exploration
+    </p>
 
-      <li id="list">
-        The most frustrating part was that many interactive elements were not
-        highlighted, the viewers could easily ignore or spend more time figuring
-        it out if not paying attention
-      </li>
+    <p id="question">
+      11. What does this reference/s communicate to you about how you should
+      feel when engaging with your research experience?
+    </p>
+    <p id="list">
+      The project depicts the vision and innovative thinking of Frank Gehry with
+      the use of visuals and sounds effectively help viewers understand the
+      artistic meaning behind this design
+    </p>
 
-      <li id="list" class="bot">
-        The most satisfying part was that each part of the project is closely
-        linked together to tell the story, helping the viewers feel as part of
-        this journey from the beginning to the end and they can experience the
-        atmosphere of the Concert Hall on their own
-      </li>
-    </ol>
+    <p id="question">
+      12. What is the most frustrating part of the interaction to you and what
+      makes that part frustrating?
+    </p>
+    <p id="list">
+      The most frustrating part was that many interactive elements were not
+      highlighted, the viewers could easily ignore or spend more time figuring
+      it out if not paying attention
+    </p>
+
+    <p id="question">
+      13. What is the most satisfying part of the interaction to you and what
+      makes that part satisfying?
+    </p>
+    <p id="list">
+      The most satisfying part was that each part of the project is closely
+      linked together to tell the story, helping the viewers feel as part of
+      this journey from the beginning to the end and they can experience the
+      atmosphere of the Concert Hall on their own
+    </p>
   </body>
 </html>
