--- a/assessment2/index.html
+++ b/assessment2/index.html
@@ -15,7 +15,7 @@
         <option value="zone defense 3-2">zone defense 3-2</option>
         <option value="zone defense 1-3-1">zone defense 1-3-1</option>
         <option value="zone defense 2-1-2">zone defense 2-1-2</option>
-        <option value="zone defense 1-2s-2">zone defense 1-2-2</option>
+        <option value="zone defense 1-2-2">zone defense 1-2-2</option>
       </select>
     </div>
     <div id="container"></div>
