--- a/assessment2/index.html
+++ b/assessment2/index.html
@@ -27,10 +27,13 @@
     </div>
 
     <div id="controls">
-      <button id="moveButton">Move</button>
-      <button id="dirbbleButton">Dribble</button>
+      <label for="moveBallButton">Ball movement :</label>
+      <button id="moveBallButton">Move Ball</button>
+      <button id="dribbleButton">Dribble</button>
       <button id="playButton">Play</button>
-      <button id="shotButton">Shot</button>
+      <label for="movePlayerButton">Player Movement :</label>
+      <button id="movePlayerButton">Move Player</button>
+      <button id="trapButton">Trap</button>
       <button id="screenButton">Screen</button>
     </div>
 
