--- a/assessment2/index.html
+++ b/assessment2/index.html
@@ -42,45 +42,47 @@
         <div id="container"></div>
       </div>
 
-      <div id="controls" class="toolbar">
-        <label for="moveBallButton">Ball movement :</label>
+      <div class="bottom-toolbar">
+        <div id="controls" class="toolbar">
+          <label for="moveBallButton">Ball movement :</label>
 
-        <div class="button-container">
-          <button id="moveBallButton">Move Ball</button>
-          <div class="info">
-            <p>Pass or shot the ball</p>
+          <div class="button-container">
+            <button id="moveBallButton">Move Ball</button>
+            <div class="info">
+              <p>Pass or shot the ball</p>
+            </div>
           </div>
-        </div>
 
-        <div class="button-container">
-          <button id="dribbleButton">Dribble</button>
-          <div class="info">
-            <p>Dribble the ball (move with an attacker)</p>
+          <div class="button-container">
+            <button id="dribbleButton">Dribble</button>
+            <div class="info">
+              <p>Dribble the ball (move with an attacker)</p>
+            </div>
           </div>
-        </div>
 
-        <button id="playButton">Play</button>
+          <button id="playButton">Play</button>
 
-        <label for="movePlayerButton">Player Movement :</label>
+          <label for="movePlayerButton">Player Movement :</label>
 
-        <div class="button-container">
-          <button id="movePlayerButton">Move Player</button>
-          <div class="info">
-            <p>Move the player (with or without the ball)</p>
+          <div class="button-container">
+            <button id="movePlayerButton">Move Player</button>
+            <div class="info">
+              <p>Move the player (with or without the ball)</p>
+            </div>
           </div>
-        </div>
 
-        <div class="button-container">
-          <button id="trapButton">Trap</button>
-          <div class="info">
-            <p>Double-team (with two defenders)</p>
+          <div class="button-container">
+            <button id="trapButton">Trap</button>
+            <div class="info">
+              <p>Double-team (with two defenders)</p>
+            </div>
           </div>
-        </div>
 
-        <div class="button-container">
-          <button id="screenButton">Screen</button>
-          <div class="info">
-            <p>Block a defender (with an attacker)</p>
+          <div class="button-container">
+            <button id="screenButton">Screen</button>
+            <div class="info">
+              <p>Block a defender (with an attacker)</p>
+            </div>
           </div>
         </div>
       </div>
